codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_mentions_only_callable_installed.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: snapshot
---
› Google Drive  [App] Connected files

  enter insert · esc close

› $

  gpt-5.6-sol default · /tmp/project

--- plugin authentication ---
  Plugins
  Plugin plugin installed.
  App setup 1/1: % Arabica UAE
  Already installed in this session.


     ChatGPT apps link unavailable  This app did not provide an install/manage
                                    URL
› 1. Continue                       Advance to the next app
  2. Skip remaining app setup       Stop this follow-up flow for this plugin

  esc close
